--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -68,6 +68,11 @@
                         <i class="bi bi-chat-square-text me-2"></i> Negotiation Questions
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" routerLink="/reports-stats" routerLinkActive="active" (click)="closeSidebarOnMobile()">
+                        <i class="bi bi-graph-up-arrow me-2"></i> Reports & Stats
+                    </a>
+                </li>
             </ul>
             </div>
         </div>
